css/styles.css
* {
    padding: 0;
    margin: 0;
    font-size: 12px;
}

.button {
    width: 20px;
    height: 20px;
    border: 0;
    vertical-align: middle;
    background: no-repeat url(data:image/png;base64,%% img/icons.png base64 %%);
    cursor: pointer;
}

.button.disabled {
    visibility: hidden;
}

#poll {
    display: none;
}

.variant {
    min-height: 35px;
    padding: 4px;
}

.variant.voted {
    background: #90EE90;
}

.variant-name-container {
    display: inline-block;
    width: 25%;
    min-height: 35px;
    position: relative;
    vertical-align: top;
}

.variant-name-container input {
    padding: 4px;
    margin: 4px;
    vertical-align: middle;
}

.variant-controls {
    display: none;
    position: absolute;
    right: 2px;
    top: 2px;
}

.variant:hover .variant-controls {
    display: block;
}

.variant-move-up {
    background-position: 0 0;
}

.variant-move-up:hover {
    background-position: -20px 0;
}

.variant-move-down {
    background-position: -40px 0;
}

.variant-move-down:hover {
    background-position: -60px 0;
}

.variant-edit {
    background-position: -80px 0;
}

.variant-edit:hover {
    background-position: -100px 0;
}

.variant-remove {
    background-position: -160px 0;
}

.variant-remove:hover {
    background-position: -180px 0;
}

.variant-vote-count {
    font-weight: bold;
}

.variant-voters {
    display: inline-block;
    min-height: 35px;
    width: 75%;
    vertical-align: top;
}

.variant-avatar {
    display: inline-block;
    width: 30px;
    height: 30px;
    background: no-repeat center center url(data:image/png;base64,%% img/unknown.png base64 %%);
    background-size: 30px;
    margin: 2px;
    vertical-align: top;
}

#add-variant {
    display: none;
    padding: 4px;
}

#add-variant input {
    padding: 4px;
    width: 100px;
}

#add-variant input:focus {
    width: 250px;
}

.toggle-options {
    background-position: -120px;
}

.toggle-options:hover {
    background-position: -140px;
}

#options {
    display: none;
}

#options label {
    display: block;
    padding: 4px;
}

#options input {
    vertical-align: middle;
}

.about-link {
    margin-left: 5px;
}

